parser.output
Terminals unused in grammar

    NOT
    TERNARY_QUEST
    TERNARY_COLON


Rules useless in parser due to conflicts

    3 prikaz: prikaz
    4       | prikaz prikaz_list
   10       | IF '(' vyraz ')' prikaz
   11       | IF '(' vyraz ')' prikaz ELSE prikaz
   12       | FOR '(' vyraz ';' vyraz ';' vyraz ')' prikaz
   13       | WHILE '(' vyraz ')' prikaz

   19 prikaz_list: ε
   20            | prikaz
   21            | prikaz_list prikaz


State 0 conflicts: 9 shift/reduce
State 7 conflicts: 9 shift/reduce
State 9 conflicts: 9 shift/reduce, 10 reduce/reduce
State 11 conflicts: 9 shift/reduce, 21 reduce/reduce
State 19 conflicts: 9 shift/reduce, 18 reduce/reduce
State 21 conflicts: 9 shift/reduce, 36 reduce/reduce
State 22 conflicts: 10 shift/reduce
State 24 conflicts: 9 shift/reduce, 12 reduce/reduce
State 44 conflicts: 10 reduce/reduce
State 46 conflicts: 9 shift/reduce, 36 reduce/reduce
State 87 conflicts: 9 shift/reduce
State 89 conflicts: 9 shift/reduce
State 120 conflicts: 10 shift/reduce, 36 reduce/reduce
State 122 conflicts: 9 shift/reduce, 36 reduce/reduce
State 125 conflicts: 9 shift/reduce
State 127 conflicts: 9 shift/reduce
State 129 conflicts: 9 shift/reduce, 36 reduce/reduce
State 131 conflicts: 9 reduce/reduce
State 132 conflicts: 9 shift/reduce
State 133 conflicts: 9 shift/reduce, 36 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: prikaz

    2 prikaz: ε
    3       | prikaz
    4       | prikaz prikaz_list
    5       | PRINT '(' RETEZ ')' ';'
    6       | PRINT '(' RETEZ ',' vyraz ')' ';'
    7       | PRINT '(' vyraz ')' ';'
    8       | SCAN '(' PROMENNA ')' ';'
    9       | '{' prikaz_list '}'
   10       | IF '(' vyraz ')' prikaz
   11       | IF '(' vyraz ')' prikaz ELSE prikaz
   12       | FOR '(' vyraz ';' vyraz ';' vyraz ')' prikaz
   13       | WHILE '(' vyraz ')' prikaz
   14       | DO prikaz WHILE '(' vyraz ')' ';'
   15       | error ';'
   16       | error '}'
   17       | '{' error '}'
   18       | ';'

   19 prikaz_list: ε
   20            | prikaz
   21            | prikaz_list prikaz

   22 vyraz: CISLO
   23      | PROMENNA
   24      | vyraz '=' vyraz
   25      | vyraz ADD_ASSIGN vyraz
   26      | vyraz SUB_ASSIGN vyraz
   27      | vyraz MUL_ASSIGN vyraz
   28      | vyraz DIV_ASSIGN vyraz
   29      | vyraz MOD_ASSIGN vyraz
   30      | vyraz SHL_ASSIGN vyraz
   31      | vyraz SHR_ASSIGN vyraz
   32      | vyraz AND_ASSIGN vyraz
   33      | vyraz XOR_ASSIGN vyraz
   34      | vyraz OR_ASSIGN vyraz
   35      | vyraz '+' vyraz
   36      | vyraz '-' vyraz
   37      | vyraz '*' vyraz
   38      | vyraz '/' vyraz
   39      | vyraz MOD vyraz
   40      | vyraz SHL vyraz
   41      | vyraz SHR vyraz
   42      | vyraz BIT_AND vyraz
   43      | vyraz BIT_OR vyraz
   44      | vyraz BIT_XOR vyraz
   45      | vyraz AND vyraz
   46      | vyraz OR vyraz
   47      | '<' vyraz
   48      | '>' vyraz
   49      | POROVNANI vyraz
   50      | NENIROVNO vyraz
   51      | MENSIROVNO vyraz
   52      | VETSIROVNO vyraz
   53      | '-' vyraz
   54      | BIT_NOT vyraz
   55      | INKREM PROMENNA
   56      | PROMENNA INKREM
   57      | PROMENNA DEKREM
   58      | '(' vyraz ')'
   59      | vyraz COMMA vyraz


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 5 6 7 8 10 11 12 13 14 58
    ')' (41) 5 6 7 8 10 11 12 13 14 58
    '*' (42) 37
    '+' (43) 35
    ',' (44) 6
    '-' (45) 36 53
    '/' (47) 38
    ';' (59) 5 6 7 8 12 14 15 18
    '<' (60) 47
    '=' (61) 24
    '>' (62) 48
    '{' (123) 9 17
    '}' (125) 9 16 17
    error (256) 15 16 17
    CISLO <u> (258) 22
    PROMENNA <u> (259) 8 23 55 56 57
    RETEZ <u> (260) 5 6
    PRINT (261) 5 6 7
    SCAN (262) 8
    IF (263) 10 11
    ELSE (264) 11
    FOR (265) 12
    WHILE (266) 13 14
    DO (267) 14
    SHL (268) 40
    SHR (269) 41
    MOD (270) 39
    AND (271) 45
    OR (272) 46
    NOT (273)
    BIT_NOT (274) 54
    POROVNANI (275) 49
    NENIROVNO (276) 50
    MENSIROVNO (277) 51
    VETSIROVNO (278) 52
    ADD_ASSIGN (279) 25
    SUB_ASSIGN (280) 26
    MUL_ASSIGN (281) 27
    DIV_ASSIGN (282) 28
    MOD_ASSIGN (283) 29
    SHL_ASSIGN (284) 30
    SHR_ASSIGN (285) 31
    AND_ASSIGN (286) 32
    XOR_ASSIGN (287) 33
    OR_ASSIGN (288) 34
    BIT_AND (289) 42
    BIT_OR (290) 43
    BIT_XOR (291) 44
    COMMA (292) 59
    TERNARY_QUEST (293)
    TERNARY_COLON (294)
    INKREM (295) 55 56
    DEKREM (296) 57
    UMINUS (297)


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    program <u> (57)
        on left: 1
        on right: 0
    prikaz <u> (58)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 1 3 4 10 11 12 13 14 20 21
    prikaz_list <u> (59)
        on left: 19 20 21
        on right: 4 9 21
    vyraz <u> (60)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 6 7 10 11 12 13 14 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 58 59


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    PRINT  shift, and go to state 2
    SCAN   shift, and go to state 3
    IF     shift, and go to state 4
    FOR    shift, and go to state 5
    WHILE  shift, and go to state 6
    DO     shift, and go to state 7
    ';'    shift, and go to state 8
    '{'    shift, and go to state 9

    $end   reduce using rule 2 (prikaz)
    error  [reduce using rule 2 (prikaz)]
    PRINT  [reduce using rule 2 (prikaz)]
    SCAN   [reduce using rule 2 (prikaz)]
    IF     [reduce using rule 2 (prikaz)]
    FOR    [reduce using rule 2 (prikaz)]
    WHILE  [reduce using rule 2 (prikaz)]
    DO     [reduce using rule 2 (prikaz)]
    ';'    [reduce using rule 2 (prikaz)]
    '{'    [reduce using rule 2 (prikaz)]

    program  go to state 10
    prikaz   go to state 11


State 1

   15 prikaz: error • ';'
   16       | error • '}'

    ';'  shift, and go to state 12
    '}'  shift, and go to state 13


State 2

    5 prikaz: PRINT • '(' RETEZ ')' ';'
    6       | PRINT • '(' RETEZ ',' vyraz ')' ';'
    7       | PRINT • '(' vyraz ')' ';'

    '('  shift, and go to state 14


State 3

    8 prikaz: SCAN • '(' PROMENNA ')' ';'

    '('  shift, and go to state 15


State 4

   10 prikaz: IF • '(' vyraz ')' prikaz
   11       | IF • '(' vyraz ')' prikaz ELSE prikaz

    '('  shift, and go to state 16


State 5

   12 prikaz: FOR • '(' vyraz ';' vyraz ';' vyraz ')' prikaz

    '('  shift, and go to state 17


State 6

   13 prikaz: WHILE • '(' vyraz ')' prikaz

    '('  shift, and go to state 18


State 7

   14 prikaz: DO • prikaz WHILE '(' vyraz ')' ';'

    error  shift, and go to state 1
    PRINT  shift, and go to state 2
    SCAN   shift, and go to state 3
    IF     shift, and go to state 4
    FOR    shift, and go to state 5
    WHILE  shift, and go to state 6
    DO     shift, and go to state 7
    ';'    shift, and go to state 8
    '{'    shift, and go to state 9

    error  [reduce using rule 2 (prikaz)]
    PRINT  [reduce using rule 2 (prikaz)]
    SCAN   [reduce using rule 2 (prikaz)]
    IF     [reduce using rule 2 (prikaz)]
    FOR    [reduce using rule 2 (prikaz)]
    WHILE  [reduce using rule 2 (prikaz)]
    DO     [reduce using rule 2 (prikaz)]
    ';'    [reduce using rule 2 (prikaz)]
    '{'    [reduce using rule 2 (prikaz)]

    prikaz  go to state 19


State 8

   18 prikaz: ';' •

    $default  reduce using rule 18 (prikaz)


State 9

    9 prikaz: '{' • prikaz_list '}'
   17       | '{' • error '}'

    error  shift, and go to state 20
    PRINT  shift, and go to state 2
    SCAN   shift, and go to state 3
    IF     shift, and go to state 4
    FOR    shift, and go to state 5
    WHILE  shift, and go to state 6
    DO     shift, and go to state 7
    ';'    shift, and go to state 8
    '{'    shift, and go to state 9

    error  [reduce using rule 2 (prikaz)]
    error  [reduce using rule 19 (prikaz_list)]
    PRINT  [reduce using rule 2 (prikaz)]
    PRINT  [reduce using rule 19 (prikaz_list)]
    SCAN   [reduce using rule 2 (prikaz)]
    SCAN   [reduce using rule 19 (prikaz_list)]
    IF     [reduce using rule 2 (prikaz)]
    IF     [reduce using rule 19 (prikaz_list)]
    FOR    [reduce using rule 2 (prikaz)]
    FOR    [reduce using rule 19 (prikaz_list)]
    WHILE  [reduce using rule 2 (prikaz)]
    WHILE  [reduce using rule 19 (prikaz_list)]
    DO     [reduce using rule 2 (prikaz)]
    DO     [reduce using rule 19 (prikaz_list)]
    ';'    [reduce using rule 2 (prikaz)]
    ';'    [reduce using rule 19 (prikaz_list)]
    '{'    [reduce using rule 2 (prikaz)]
    '{'    [reduce using rule 19 (prikaz_list)]
    '}'    reduce using rule 2 (prikaz)
    '}'    [reduce using rule 19 (prikaz_list)]

    prikaz       go to state 21
    prikaz_list  go to state 22


State 10

    0 $accept: program • $end

    $end  shift, and go to state 23


State 11

    1 program: prikaz •
    3 prikaz: prikaz •
    4       | prikaz • prikaz_list

    error  shift, and go to state 1
    PRINT  shift, and go to state 2
    SCAN   shift, and go to state 3
    IF     shift, and go to state 4
    FOR    shift, and go to state 5
    WHILE  shift, and go to state 6
    DO     shift, and go to state 7
    ';'    shift, and go to state 8
    '{'    shift, and go to state 9

    $end   reduce using rule 1 (program)
    $end   [reduce using rule 2 (prikaz)]
    $end   [reduce using rule 3 (prikaz)]
    $end   [reduce using rule 19 (prikaz_list)]
    error  [reduce using rule 2 (prikaz)]
    error  [reduce using rule 3 (prikaz)]
    error  [reduce using rule 19 (prikaz_list)]
    PRINT  [reduce using rule 2 (prikaz)]
    PRINT  [reduce using rule 3 (prikaz)]
    PRINT  [reduce using rule 19 (prikaz_list)]
    SCAN   [reduce using rule 2 (prikaz)]
    SCAN   [reduce using rule 3 (prikaz)]
    SCAN   [reduce using rule 19 (prikaz_list)]
    IF     [reduce using rule 2 (prikaz)]
    IF     [reduce using rule 3 (prikaz)]
    IF     [reduce using rule 19 (prikaz_list)]
    FOR    [reduce using rule 2 (prikaz)]
    FOR    [reduce using rule 3 (prikaz)]
    FOR    [reduce using rule 19 (prikaz_list)]
    WHILE  [reduce using rule 2 (prikaz)]
    WHILE  [reduce using rule 3 (prikaz)]
    WHILE  [reduce using rule 19 (prikaz_list)]
    DO     [reduce using rule 2 (prikaz)]
    DO     [reduce using rule 3 (prikaz)]
    DO     [reduce using rule 19 (prikaz_list)]
    ';'    [reduce using rule 2 (prikaz)]
    ';'    [reduce using rule 3 (prikaz)]
    ';'    [reduce using rule 19 (prikaz_list)]
    '{'    [reduce using rule 2 (prikaz)]
    '{'    [reduce using rule 3 (prikaz)]
    '{'    [reduce using rule 19 (prikaz_list)]

    prikaz       go to state 21
    prikaz_list  go to state 24


State 12

   15 prikaz: error ';' •

    $default  reduce using rule 15 (prikaz)


State 13

   16 prikaz: error '}' •

    $default  reduce using rule 16 (prikaz)


State 14

    5 prikaz: PRINT '(' • RETEZ ')' ';'
    6       | PRINT '(' • RETEZ ',' vyraz ')' ';'
    7       | PRINT '(' • vyraz ')' ';'

    CISLO       shift, and go to state 25
    PROMENNA    shift, and go to state 26
    RETEZ       shift, and go to state 27
    BIT_NOT     shift, and go to state 28
    POROVNANI   shift, and go to state 29
    NENIROVNO   shift, and go to state 30
    MENSIROVNO  shift, and go to state 31
    VETSIROVNO  shift, and go to state 32
    INKREM      shift, and go to state 33
    '<'         shift, and go to state 34
    '>'         shift, and go to state 35
    '-'         shift, and go to state 36
    '('         shift, and go to state 37

    vyraz  go to state 38


State 15

    8 prikaz: SCAN '(' • PROMENNA ')' ';'

    PROMENNA  shift, and go to state 39


State 16

   10 prikaz: IF '(' • vyraz ')' prikaz
   11       | IF '(' • vyraz ')' prikaz ELSE prikaz

    CISLO       shift, and go to state 25
    PROMENNA    shift, and go to state 26
    BIT_NOT     shift, and go to state 28
    POROVNANI   shift, and go to state 29
    NENIROVNO   shift, and go to state 30
    MENSIROVNO  shift, and go to state 31
    VETSIROVNO  shift, and go to state 32
    INKREM      shift, and go to state 33
    '<'         shift, and go to state 34
    '>'         shift, and go to state 35
    '-'         shift, and go to state 36
    '('         shift, and go to state 37

    vyraz  go to state 40


State 17

   12 prikaz: FOR '(' • vyraz ';' vyraz ';' vyraz ')' prikaz

    CISLO       shift, and go to state 25
    PROMENNA    shift, and go to state 26
    BIT_NOT     shift, and go to state 28
    POROVNANI   shift, and go to state 29
    NENIROVNO   shift, and go to state 30
    MENSIROVNO  shift, and go to state 31
    VETSIROVNO  shift, and go to state 32
    INKREM      shift, and go to state 33
    '<'         shift, and go to state 34
    '>'         shift, and go to state 35
    '-'         shift, and go to state 36
    '('         shift, and go to state 37

    vyraz  go to state 41


State 18

   13 prikaz: WHILE '(' • vyraz ')' prikaz

    CISLO       shift, and go to state 25
    PROMENNA    shift, and go to state 26
    BIT_NOT     shift, and go to state 28
    POROVNANI   shift, and go to state 29
    NENIROVNO   shift, and go to state 30
    MENSIROVNO  shift, and go to state 31
    VETSIROVNO  shift, and go to state 32
    INKREM      shift, and go to state 33
    '<'         shift, and go to state 34
    '>'         shift, and go to state 35
    '-'         shift, and go to state 36
    '('         shift, and go to state 37

    vyraz  go to state 42


State 19

    3 prikaz: prikaz •
    4       | prikaz • prikaz_list
   14       | DO prikaz • WHILE '(' vyraz ')' ';'

    error  shift, and go to state 1
    PRINT  shift, and go to state 2
    SCAN   shift, and go to state 3
    IF     shift, and go to state 4
    FOR    shift, and go to state 5
    WHILE  shift, and go to state 43
    DO     shift, and go to state 7
    ';'    shift, and go to state 8
    '{'    shift, and go to state 9

    error  [reduce using rule 2 (prikaz)]
    error  [reduce using rule 3 (prikaz)]
    error  [reduce using rule 19 (prikaz_list)]
    PRINT  [reduce using rule 2 (prikaz)]
    PRINT  [reduce using rule 3 (prikaz)]
    PRINT  [reduce using rule 19 (prikaz_list)]
    SCAN   [reduce using rule 2 (prikaz)]
    SCAN   [reduce using rule 3 (prikaz)]
    SCAN   [reduce using rule 19 (prikaz_list)]
    IF     [reduce using rule 2 (prikaz)]
    IF     [reduce using rule 3 (prikaz)]
    IF     [reduce using rule 19 (prikaz_list)]
    FOR    [reduce using rule 2 (prikaz)]
    FOR    [reduce using rule 3 (prikaz)]
    FOR    [reduce using rule 19 (prikaz_list)]
    WHILE  [reduce using rule 2 (prikaz)]
    WHILE  [reduce using rule 3 (prikaz)]
    WHILE  [reduce using rule 19 (prikaz_list)]
    DO     [reduce using rule 2 (prikaz)]
    DO     [reduce using rule 3 (prikaz)]
    DO     [reduce using rule 19 (prikaz_list)]
    ';'    [reduce using rule 2 (prikaz)]
    ';'    [reduce using rule 3 (prikaz)]
    ';'    [reduce using rule 19 (prikaz_list)]
    '{'    [reduce using rule 2 (prikaz)]
    '{'    [reduce using rule 3 (prikaz)]
    '{'    [reduce using rule 19 (prikaz_list)]

    prikaz       go to state 21
    prikaz_list  go to state 24


State 20

   15 prikaz: error • ';'
   16       | error • '}'
   17       | '{' error • '}'

    ';'  shift, and go to state 12
    '}'  shift, and go to state 44


State 21

    3 prikaz: prikaz •
    4       | prikaz • prikaz_list
   20 prikaz_list: prikaz •

    error  shift, and go to state 1
    PRINT  shift, and go to state 2
    SCAN   shift, and go to state 3
    IF     shift, and go to state 4
    FOR    shift, and go to state 5
    WHILE  shift, and go to state 6
    DO     shift, and go to state 7
    ';'    shift, and go to state 8
    '{'    shift, and go to state 9

    $end   reduce using rule 2 (prikaz)
    $end   [reduce using rule 3 (prikaz)]
    $end   [reduce using rule 19 (prikaz_list)]
    $end   [reduce using rule 20 (prikaz_list)]
    error  [reduce using rule 2 (prikaz)]
    error  [reduce using rule 3 (prikaz)]
    error  [reduce using rule 19 (prikaz_list)]
    error  [reduce using rule 20 (prikaz_list)]
    PRINT  [reduce using rule 2 (prikaz)]
    PRINT  [reduce using rule 3 (prikaz)]
    PRINT  [reduce using rule 19 (prikaz_list)]
    PRINT  [reduce using rule 20 (prikaz_list)]
    SCAN   [reduce using rule 2 (prikaz)]
    SCAN   [reduce using rule 3 (prikaz)]
    SCAN   [reduce using rule 19 (prikaz_list)]
    SCAN   [reduce using rule 20 (prikaz_list)]
    IF     [reduce using rule 2 (prikaz)]
    IF     [reduce using rule 3 (prikaz)]
    IF     [reduce using rule 19 (prikaz_list)]
    IF     [reduce using rule 20 (prikaz_list)]
    ELSE   reduce using rule 2 (prikaz)
    ELSE   [reduce using rule 3 (prikaz)]
    ELSE   [reduce using rule 19 (prikaz_list)]
    ELSE   [reduce using rule 20 (prikaz_list)]
    FOR    [reduce using rule 2 (prikaz)]
    FOR    [reduce using rule 3 (prikaz)]
    FOR    [reduce using rule 19 (prikaz_list)]
    FOR    [reduce using rule 20 (prikaz_list)]
    WHILE  [reduce using rule 2 (prikaz)]
    WHILE  [reduce using rule 3 (prikaz)]
    WHILE  [reduce using rule 19 (prikaz_list)]
    WHILE  [reduce using rule 20 (prikaz_list)]
    DO     [reduce using rule 2 (prikaz)]
    DO     [reduce using rule 3 (prikaz)]
    DO     [reduce using rule 19 (prikaz_list)]
    DO     [reduce using rule 20 (prikaz_list)]
    ';'    [reduce using rule 2 (prikaz)]
    ';'    [reduce using rule 3 (prikaz)]
    ';'    [reduce using rule 19 (prikaz_list)]
    ';'    [reduce using rule 20 (prikaz_list)]
    '{'    [reduce using rule 2 (prikaz)]
    '{'    [reduce using rule 3 (prikaz)]
    '{'    [reduce using rule 19 (prikaz_list)]
    '{'    [reduce using rule 20 (prikaz_list)]
    '}'    reduce using rule 2 (prikaz)
    '}'    [reduce using rule 3 (prikaz)]
    '}'    [reduce using rule 19 (prikaz_list)]
    '}'    [reduce using rule 20 (prikaz_list)]

    prikaz       go to state 21
    prikaz_list  go to state 24


State 22

    9 prikaz: '{' prikaz_list • '}'
   21 prikaz_list: prikaz_list • prikaz

    error  shift, and go to state 1
    PRINT  shift, and go to state 2
    SCAN   shift, and go to state 3
    IF     shift, and go to state 4
    FOR    shift, and go to state 5
    WHILE  shift, and go to state 6
    DO     shift, and go to state 7
    ';'    shift, and go to state 8
    '{'    shift, and go to state 9
    '}'    shift, and go to state 45

    error  [reduce using rule 2 (prikaz)]
    PRINT  [reduce using rule 2 (prikaz)]
    SCAN   [reduce using rule 2 (prikaz)]
    IF     [reduce using rule 2 (prikaz)]
    FOR    [reduce using rule 2 (prikaz)]
    WHILE  [reduce using rule 2 (prikaz)]
    DO     [reduce using rule 2 (prikaz)]
    ';'    [reduce using rule 2 (prikaz)]
    '{'    [reduce using rule 2 (prikaz)]
    '}'    [reduce using rule 2 (prikaz)]

    prikaz  go to state 46


State 23

    0 $accept: program $end •

    $default  accept


State 24

    4 prikaz: prikaz prikaz_list •
   21 prikaz_list: prikaz_list • prikaz

    error  shift, and go to state 1
    PRINT  shift, and go to state 2
    SCAN   shift, and go to state 3
    IF     shift, and go to state 4
    FOR    shift, and go to state 5
    WHILE  shift, and go to state 6
    DO     shift, and go to state 7
    ';'    shift, and go to state 8
    '{'    shift, and go to state 9

    $end   reduce using rule 2 (prikaz)
    $end   [reduce using rule 4 (prikaz)]
    error  [reduce using rule 2 (prikaz)]
    error  [reduce using rule 4 (prikaz)]
    PRINT  [reduce using rule 2 (prikaz)]
    PRINT  [reduce using rule 4 (prikaz)]
    SCAN   [reduce using rule 2 (prikaz)]
    SCAN   [reduce using rule 4 (prikaz)]
    IF     [reduce using rule 2 (prikaz)]
    IF     [reduce using rule 4 (prikaz)]
    ELSE   reduce using rule 2 (prikaz)
    ELSE   [reduce using rule 4 (prikaz)]
    FOR    [reduce using rule 2 (prikaz)]
    FOR    [reduce using rule 4 (prikaz)]
    WHILE  [reduce using rule 2 (prikaz)]
    WHILE  [reduce using rule 4 (prikaz)]
    DO     [reduce using rule 2 (prikaz)]
    DO     [reduce using rule 4 (prikaz)]
    ';'    [reduce using rule 2 (prikaz)]
    ';'    [reduce using rule 4 (prikaz)]
    '{'    [reduce using rule 2 (prikaz)]
    '{'    [reduce using rule 4 (prikaz)]
    '}'    reduce using rule 2 (prikaz)
    '}'    [reduce using rule 4 (prikaz)]

    prikaz  go to state 46


State 25

   22 vyraz: CISLO •

    $default  reduce using rule 22 (vyraz)


State 26

   23 vyraz: PROMENNA •
   56      | PROMENNA • INKREM
   57      | PROMENNA • DEKREM

    INKREM  shift, and go to state 47
    DEKREM  shift, and go to state 48

    $default  reduce using rule 23 (vyraz)


State 27

    5 prikaz: PRINT '(' RETEZ • ')' ';'
    6       | PRINT '(' RETEZ • ',' vyraz ')' ';'

    ')'  shift, and go to state 49
    ','  shift, and go to state 50


State 28

   54 vyraz: BIT_NOT • vyraz

    CISLO       shift, and go to state 25
    PROMENNA    shift, and go to state 26
    BIT_NOT     shift, and go to state 28
    POROVNANI   shift, and go to state 29
    NENIROVNO   shift, and go to state 30
    MENSIROVNO  shift, and go to state 31
    VETSIROVNO  shift, and go to state 32
    INKREM      shift, and go to state 33
    '<'         shift, and go to state 34
    '>'         shift, and go to state 35
    '-'         shift, and go to state 36
    '('         shift, and go to state 37

    vyraz  go to state 51


State 29

   49 vyraz: POROVNANI • vyraz

    CISLO       shift, and go to state 25
    PROMENNA    shift, and go to state 26
    BIT_NOT     shift, and go to state 28
    POROVNANI   shift, and go to state 29
    NENIROVNO   shift, and go to state 30
    MENSIROVNO  shift, and go to state 31
    VETSIROVNO  shift, and go to state 32
    INKREM      shift, and go to state 33
    '<'         shift, and go to state 34
    '>'         shift, and go to state 35
    '-'         shift, and go to state 36
    '('         shift, and go to state 37

    vyraz  go to state 52


State 30

   50 vyraz: NENIROVNO • vyraz
